@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - add 'category' interface, to match what is given to other
+            Acme::CPANAuthors::* modules
 
 0.013     2013-10-26 17:01:19Z (Karen Etheridge)
           - welcome CARLOS, our latest member!
